# 2d_geometric_constraint_solver

./: README.md  pyproject.toml
src/geometry/: __init__.py
