[tool.poetry]
name = "two-d-geometric-constraint-solver"
version = "0.1.0"
description = "2D geometric constraint solver"
readme = "README.md"
license = "MIT"

packages = [
  { include = "constraints", from = "src" },
  { include = "examples", from = "src" },
  { include = "geometric_primitives", from = "src" },
  { include = "gui", from = "src" },
  { include = "solver", from = "src" },
  { include = "geometry", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
scipy = ">=1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
